force-app/main/default/objects/Tenant_Brokers__c/Tenant_Brokers__c.object-meta.xml
<CustomObject>
    <label>Tenant Brokers</label>
    <nameField>
        <displayFormat>B{00000}</displayFormat>
        <label>Tenantr Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenant Brokers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>