force-app/main/default/objects/Tenant_Brokers__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Tenant__r.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>