force-app/main/default/objects/Tenant_Brokers__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tenant Brokers</relationshipLabel>
    <relationshipName>Tenant_Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>