force-app/main/default/objects/Tenant_Brokers__c/fields/Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company__c</fullName>
    <formula>Broker__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Company</label>
    <type>Text</type>
</CustomField>