force-app/main/default/objects/Tenant_Brokers__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Tenant__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>