force-app/main/default/objects/Tenant_Brokers__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tenant Brokers</relationshipLabel>
    <relationshipName>Tenant_Brokers</relationshipName>
    <type>Lookup</type>
</CustomField>